# engajaflix.club

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  README.md  TODO.org  htmx.web-types.json  input.css  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: poetry.yml  python-app.yml
bio/: admin.py  forms.py  models.py  urls.py  views.py
bio/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
bio/migrations/: 0001_initial.py  0002_auto_20210508_1814.py  0003_customuser_pronoums.py  0004_auto_20210520_1942.py  0005_auto_20210520_2221.py  0006_auto_20220320_2219.py
bio/static/bio/: base.css  sidebar.css
bio/tests/: test_models.py  test_views.py
core/: admin.py  context_processors.py  forms.py  middleware.py  models.py  tests.py  urls.py  views.py
core/management/commands/: makesuperuser.py
core/migrations/: 0001_initial.py  0002_uuidsession_emailreserve.py  0003_emailreserve_social.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  gunicorn_conf.py
engajaflix/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
engajaflix_club/: asgi.py  settings.py  urls.py  wsgi.py
locale/pt_BR/LC_MESSAGES/: django.mo  django.po
missions/: admin.py  forms.py  models.py  urls.py  views.py
missions/migrations/: 0001_initial.py  0002_auto_20220320_2219.py  0003_auto_20220501_2349.py  0004_auto_20220502_0007.py  0005_auto_20220502_0014.py  0006_alter_missionperson_user.py  0007_auto_20220503_0914.py  0008_mission_experience.py
static/: theme.scss
templates/: _base.html  base.html  file_input.html  footer.html  form.html  header.html  index.html  reserve.html  sidebar.html  verify.html  verify_failed.html  verify_success.html
templates/bio/: index.html  profile.html  profile_update.html  register.html  user_list.html
templates/missions/: get.html  index.html  list.html
templates/partials/: _reserve.html  _unreserve.html  button.html  index.html  input.html  reserve.html
templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
