[tool.poetry]
name = "engajaflix-club"
version = "0.1.0"
description = ""
authors = ["Daniel Travieso <daniel@ctvlab.co>"]
readme = "README.md"
packages = [{include = "engajaflix_club"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
django-environ = "^0.10.0"
django-allauth = "^0.54.0"
django-htmx = "^1.15.0"
django-fastdev = "^1.7.3"
django-anymail = {extras = ["sendgrid"], version = "^10.0"}
django-extensions = "^3.2.3"
sentry-sdk = "^1.25.1"
mysqlclient = "^2.1.1"
loguru = "^0.7.0"
django-loguru = "^1.0.3"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.1.0"
django-browser-reload = "^1.10.0"
black = "^23.3.0"
ruff = "^0.0.272"
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.1"}
pytest = "^7.3.2"
pytest-django = "^4.5.2"
pytest-sugar = "^0.9.7"
poethepoet = "^0.20.0"
gunicorn = "^20.1.0"
selenium = "^4.10.0"
djlint = "^1.31.0"
pytest-xdist = "^3.3.1"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "engajaflix_club.settings"
python_files = ["tests.py","*_test.py","test_*.py"]
python_classes = "*TestCase"
python_functions = "test_*"


[tool.poe.tasks]
r = { cmd = "python manage.py runserver", help = "Start dev serve" }
u = { cmd = "python manage.py makesuperuser", help = "Create a new superuser using environment varibales, look in your .env.template file" }
m = { cmd = "python manage.py migrate", help = "Apply migrations" }
mk = { cmd = "python manage.py makemigrations", help = "Make migrations" }
rd = { cmd = "python manage.py reset_db --noinput", help = "Delete and recreate your database" }
cs = { cmd = "python manage.py collectstatic --noinput", help = "Collect static files for build" }
tw = { cmd = "npx tailwindcss -i ./input.css -o ./static/css/output.css --minify", help = "Compile tailwind minified" }
tww = { cmd = "npx tailwindcss -i ./input.css -o ./static/css/output.css --watch", help = "Compile tailwind in watch mode" }
wt = { cmd = "pytest -f", help = "Run tests and watch" }
t = { cmd = "pytest -s", help = "Run tests and watch" }

[tool.ruff]
line-length = 120
select = [
    "E", # https://github.com/charliermarsh/ruff#pycodestylet
    "F", # https://github.com/charliermarsh/ruff#pyflakes
    "UP", # https://github.com/charliermarsh/ruff#pyupgrade
    "N", # https://github.com/charliermarsh/ruff#pep8-naming
    "S", # https://github.com/charliermarsh/ruff#flake8-bandit
    "C", # https://github.com/charliermarsh/ruff#flake8-comprehensions
    "B", # https://github.com/charliermarsh/ruff#flake8-bugbear
    "T" # https://github.com/charliermarsh/ruff#flake8-print
]
extend-exclude = [
    "*/migrations/*"
]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]
exclude = ["/migrations/"]

[tool.django-stubs]
django_settings_module = "engajaflix_club.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
